# macaulay_py

./: README.md  pyproject.toml
examples/: example.py
src/macaulay/: __init__.py  main.py  typing.py
