[build-system]
requires=["hatchling"]
build-backend="hatchling.build"

[project]
name = "macaulay"
version = "0.0.1"
authors = [
    { name="James Gopsill", email="james.gopsill@gmail.com" },
]
description = "A package to create, integrate and compute shear force and bending moments from Macaulay Notation."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy"
]

[project.urls]
"Homepage" = "https://github.com/jamesgopsill/macaulay_py"
"Bug Tracker" = "https://github.com/jamesgopsill/macaulay_py/issues"